new newton, twiss requires explicit desc specification

--- a/examples/nonlinear-twiss.ipynb
+++ b/examples/nonlinear-twiss.ipynb
@@ -583,9 +583,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia Global Project (8 threads) 1.10.10",
+   "display_name": "Julia Global (10 threads) 1.10",
    "language": "julia",
-   "name": "julia-global-project-_8-threads_-1.10"
+   "name": "julia-global-_10-threads_-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
