--- a/examples/orbit-correction.ipynb
+++ b/examples/orbit-correction.ipynb
@@ -5,9 +5,20 @@
    "execution_count": 1,
    "id": "ee4adde8-84a7-412d-a317-a2386a81c73e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m packages...\n",
+      "  55047.0 ms\u001b[32m  ✓ \u001b[39mSciBmad\n",
+      "  1 dependency successfully precompiled in 56 seconds. 118 already precompiled.\n"
+     ]
+    }
+   ],
    "source": [
-    "using SciBmad, CairoMakie, BenchmarkTools"
+    "using SciBmad, CairoMakie\n",
+    "import DifferentiationInterface as DI"
    ]
   },
   {
@@ -21,109 +32,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "50d62a49-7a89-4685-8db9-9035b2d4f904",
+   "metadata": {},
+   "source": [
+    "Let's set the RF voltage for $Q_s=-0.05$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "da3b2748-20e8-43d7-a490-d5974ea10267",
+   "id": "2c95ac63-4f0d-4827-9789-fd2621b5a121",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.368180 seconds (5.55 M allocations: 306.743 MiB, 10.26% gc time, 29.85% compilation time: 92% of which was recompilation)\n"
+      "  3.164249 seconds (49.72 M allocations: 4.565 GiB, 9.00% gc time, 0.96% compilation time: 100% of which was recompilation)\n"
      ]
-    }
-   ],
-   "source": [
-    "@time twiss(ring);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48618b47-6a74-405d-8eb1-c7c0de27c29d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "886da95c-40d9-46ca-8f79-38978f3eb59c",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "(u = [3.35560679069565e6], converged = true, n_iters = 5)"
+       "(u = [3.355606790694894e6], converged = true, n_iters = 5)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# set RF for 0.05 synch tune\n",
-    "# use FiniteDiff for 2 reasons:\n",
-    "# 1. twiss is compatible only with GTPSA and finite differences\n",
-    "# 2. Need to modify SciBmad.newton for handing it the value and jacobian\n",
-    "\n",
-    "\n",
-    "using FiniteDiff\n",
-    "import DifferentiationInterface as DI\n",
-    "\n",
-    "cavities = ring.line[findall(x->x.kind==\"RFCavity\", ring.line)]\n",
-    "\n",
-    "function setrf!(out_v, in_v, params)\n",
-    "    lat = params[1]\n",
-    "    cavities = params[2]\n",
+    "# To use SciBmad's newton search function, need to create a function \n",
+    "# val_and_jac!(y, jac, x, params) which mutates in place y=f(x) and \n",
+    "# jac with the jacobian at point x. p is a set of parameters \n",
+    "# which will can be modified in the function call\n",
+    "function val_and_jac!(y, jac, x, ps)\n",
+    "    lat = ps[1]\n",
+    "    cavities = ps[2]\n",
+    "    descriptor = ps[3]\n",
+    "    Δv = vars(descriptor)\n",
+    "    Δk = params(descriptor)[1]\n",
     "    for cav in cavities\n",
-    "        cav.voltage=in_v[1]\n",
+    "        cav.voltage= x[1] + Δk\n",
     "    end\n",
-    "    out_v[1] = twiss(lat).phi_3[end]+0.05\n",
+    "    v0, __ = find_closed_orbit(lat; backend=DI.AutoGTPSA(descriptor), prep=nothing, prep_coast=nothing)\n",
+    "    b0 = Bunch(v0 + Δv; species=lat.species_ref, R_ref=lat.R_ref)\n",
+    "    track!(b0, lat)\n",
+    "    m = DAMap(v=b0.coords.v)\n",
+    "    a = normal(m)\n",
+    "    c = c_map(a)\n",
+    "    r = inv(c) ∘ inv(a) ∘ m ∘ a ∘ c\n",
+    "    Qs = real(-log(SciBmad.NNF.factor_out(r.v[5], 5))/(2*pi*im))\n",
+    "    y[1] = scalar(Qs) + 0.05\n",
+    "    jac[1] = Qs[7]\n",
     "end\n",
     "\n",
-    "in_v = [4e6]\n",
-    "out_v = [0.0]\n",
-    "res = SciBmad.newton!(setrf!, out_v, in_v, (ring,cavities); backend=DI.AutoFiniteDiff())"
+    "# We will use GTPSA to get the gradient\n",
+    "# Then use a newton search with that gradient\n",
+    "# Need 6 variables (2nd order) and 1 parameter (1st order)\n",
+    "cavities = ring.line[findall(x->x.kind==\"RFCavity\", ring.line)];\n",
+    "descriptor = Descriptor(6, 2, 1, 1)\n",
+    "y = [0.0]\n",
+    "jac = [0.0]\n",
+    "x = [4e6]\n",
+    "@time res = SciBmad.newton!(val_and_jac!, y, jac, x, (ring, cavities, descriptor))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "9a366f8f-368f-40c2-bd14-101dd4a9904f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "foreach(x->x.voltage=res.u[1], cavities)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "3908b769-520c-4e7c-9626-9564e43c0ea5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.04999999999999671"
+       "-0.049999999999994375"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# load new lattice bc new TPSA, set with proper synch tune\n",
+    "include(\"../lattices/esr-v6.3.1.jl\");\n",
+    "cavities = ring.line[findall(x->x.kind==\"RFCavity\", ring.line)];\n",
+    "foreach(x->x.voltage=res.u[1], cavities)\n",
+    "# Check\n",
     "t = twiss(ring);\n",
     "t.phi_3[end]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "b9c62243-3e70-4c3d-92ef-671aae6a5695",
    "metadata": {},
    "outputs": [],
@@ -134,54 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "d830da43-edff-4ae4-b21e-c4e73753e0b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Table with 28 columns and 6271 rows:\n",
-       "      s        phi_1     beta_1    alpha_1     phi_2     beta_2     ⋯\n",
-       "    ┌────────────────────────────────────────────────────────────────\n",
-       " 1  │ 0.0      0.0       0.590629  -0.0582229  0.0       0.0556272  ⋯\n",
-       " 2  │ 0.0      0.0       0.590629  -0.0582229  0.0       0.0556272  ⋯\n",
-       " 3  │ 5.3      0.223257  48.9552   -9.06396    0.24495   505.784    ⋯\n",
-       " 4  │ 7.1      0.226984  153.858   -63.0251    0.245476  454.983    ⋯\n",
-       " 5  │ 7.6      0.227413  223.335   -75.9308    0.245676  346.282    ⋯\n",
-       " 6  │ 9.0      0.228166  337.243   7.17389     0.246552  216.132    ⋯\n",
-       " 7  │ 16.75    0.232547  235.355   5.9677      0.253576  142.881    ⋯\n",
-       " 8  │ 22.2501  0.236869  174.459   5.11367     0.260889  100.464    ⋯\n",
-       " 9  │ 42.0647  0.279022  32.8696   2.02825     0.351286  13.5219    ⋯\n",
-       " 10 │ 42.3147  0.280252  31.8648   1.98934     0.354278  13.0874    ⋯\n",
-       " 11 │ 42.4647  0.281008  31.2712   1.96599     0.356121  12.8346    ⋯\n",
-       " 12 │ 43.0647  0.284153  29.7673   0.572379    0.363932  11.5659    ⋯\n",
-       " 13 │ 46.5647  0.304121  26.3051   0.416186    0.436608  5.45446    ⋯\n",
-       " 14 │ 46.8147  0.30564   26.0996   0.40503     0.444065  5.22937    ⋯\n",
-       " 15 │ 46.9647  0.306557  25.979    0.398336    0.448688  5.10784    ⋯\n",
-       " 16 │ 47.5647  0.310373  23.4626   3.6447      0.467658  5.12303    ⋯\n",
-       " 17 │ 51.0647  0.36066   5.40412   1.51377     0.545275  10.888     ⋯\n",
-       " 18 │ 51.3147  0.368569  4.68512   1.36152     0.548829  11.5153    ⋯\n",
-       " 19 │ 51.4647  0.373894  4.29028   1.27017     0.550868  11.9055    ⋯\n",
-       " 20 │ 52.0647  0.400815  2.94971   0.955569    0.558359  13.7072    ⋯\n",
-       " 21 │ 53.219   0.489731  1.60739   0.207057    0.570067  17.9999    ⋯\n",
-       " 22 │ 54.1104  0.578807  1.75375   -0.371073   0.577227  21.8308    ⋯\n",
-       " 23 │ 55.2647  0.656245  3.47553   -1.11984    0.584736  27.4597    ⋯\n",
-       " ⋮  │    ⋮        ⋮         ⋮          ⋮          ⋮          ⋮      ⋱"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t = twiss(ring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "ce1ad88e-5d03-4a79-8d41-6b683e692796",
    "metadata": {},
    "outputs": [
@@ -198,6 +157,7 @@
    ],
    "source": [
     "# Plot the orbit:\n",
+    "t = twiss(ring)\n",
     "set_theme!(theme_latexfonts())\n",
     "\n",
     "f = Figure(fontsize=22, size=(800,400));\n",
