--- a/examples/julia.ipynb
+++ b/examples/julia.ipynb
@@ -797,15 +797,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia Global Project (8 threads) 1.10.10",
-   "language": "julia",
-   "name": "julia-global-project-_8-threads_-1.10"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.10.10"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
