--- a/examples/orbit-correction.ipynb
+++ b/examples/orbit-correction.ipynb
@@ -5,17 +5,7 @@
    "execution_count": 1,
    "id": "ee4adde8-84a7-412d-a317-a2386a81c73e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m packages...\n",
-      "  55047.0 ms\u001b[32m  ✓ \u001b[39mSciBmad\n",
-      "  1 dependency successfully precompiled in 56 seconds. 118 already precompiled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using SciBmad, CairoMakie\n",
     "import DifferentiationInterface as DI"
@@ -41,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2c95ac63-4f0d-4827-9789-fd2621b5a121",
    "metadata": {},
    "outputs": [
@@ -49,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  3.164249 seconds (49.72 M allocations: 4.565 GiB, 9.00% gc time, 0.96% compilation time: 100% of which was recompilation)\n"
+      "  4.541793 seconds (60.50 M allocations: 5.273 GiB, 9.82% gc time, 28.35% compilation time: <1% of which was recompilation)\n"
      ]
     },
     {
@@ -58,7 +48,7 @@
        "(u = [3.355606790694894e6], converged = true, n_iters = 5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ce1ad88e-5d03-4a79-8d41-6b683e692796",
    "metadata": {},
    "outputs": [
@@ -170,8 +160,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7290d077-805c-47a7-8c99-9174964d0e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2.6000686032132613e-7, 1.5303928131191435e-5, -3.556902826710349e-9, 3.9231617960303014e-8, -0.02704383542507716, -0.0003522717640595932]"
+     ]
+    }
+   ],
+   "source": [
+    "print([t.orbit_x[1], t.orbit_px[1], t.orbit_y[1], t.orbit_py[1], t.orbit_z[1], t.orbit_pz[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c73da8a4-37b7-4ada-b98b-8d50d925016b",
    "metadata": {},
    "outputs": [],
    "source": []
