--- a/examples/dynamic-aperture.ipynb
+++ b/examples/dynamic-aperture.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "id": "a69e9562-8bb4-4c22-97ce-fbee2f1601d9",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "id": "b472fa18-ad94-4d9a-9d94-1f53da259426",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"../lattices/esr-v6.3.1-tapered.jl\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "31ba9f47-3b31-46b0-ba62-9e0ef4f4ca6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.7466081906947413"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sf01_7_2.Kn2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "2b4a5252-7971-420b-90d5-a392a95e7443",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32×2 Matrix{Any}:\n",
+       " \"sf01_5_1\"  4.49673\n",
+       " \"sf01_5_2\"  4.49673\n",
+       " \"sf02_5_1\"  1.77959\n",
+       " \"sf02_5_2\"  1.77959\n",
+       " \"sf03_5_1\"  4.4966\n",
+       " \"sf03_5_2\"  4.4966\n",
+       " \"sf04_5_1\"  1.77954\n",
+       " \"sf04_5_2\"  1.77954\n",
+       " \"sf05_5_1\"  4.49647\n",
+       " \"sf05_5_2\"  4.49647\n",
+       " \"sf06_5_1\"  1.77948\n",
+       " \"sf06_5_2\"  1.77948\n",
+       " \"sf07_5_1\"  4.49634\n",
+       " ⋮           \n",
+       " \"sf11_5_1\"  4.49607\n",
+       " \"sf11_5_2\"  4.49607\n",
+       " \"sf12_5_1\"  1.77933\n",
+       " \"sf12_5_2\"  1.77933\n",
+       " \"sf13_5_1\"  4.49594\n",
+       " \"sf13_5_2\"  4.49594\n",
+       " \"sf14_5_1\"  1.77927\n",
+       " \"sf14_5_2\"  1.77927\n",
+       " \"sf15_5_1\"  4.49582\n",
+       " \"sf15_5_2\"  4.49582\n",
+       " \"sf16_5_1\"  1.77923\n",
+       " \"sf16_5_2\"  1.77923"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sextupoles = filter(x->x.kind==\"Sextupole\", ring.line)\n",
+    "chrom_sextupoles = filter(x->x.Kn2 != 0, sextupoles)\n",
+    "\n",
+    "arc1_sextupoles = filter(x->occursin(r\"_1$\", x.name), chrom_sextupoles)\n",
+    "arc3_sextupoles = filter(x->occursin(r\"_3$\", x.name), chrom_sextupoles)\n",
+    "arc5_sextupoles = filter(x->occursin(r\"_5_\", x.name), chrom_sextupoles)\n",
+    "arc7_sextupoles = filter(x->occursin(r\"_7$\", x.name), chrom_sextupoles)\n",
+    "arc9_sextupoles = filter(x->occursin(r\"_9_|_9$\", x.name), chrom_sextupoles)\n",
+    "arc11_sextupoles = filter(x->occursin(r\"_11_|_11$$\", x.name), chrom_sextupoles)\n",
+    "#tw.table.phi_1[arc3_sextupoles[4].beamline_index] - tw.table.phi_1[arc3_sextupoles[1].beamline_index]\n",
+    "hcat(map(x->x.name, arc11_sextupoles), map(x->x.beamline_index, arc11_sextupoles))\n",
+    "hcat(map(x->x.name,arc5_sextupoles), map(x->x.Kn2, arc5_sextupoles))"
    ]
   },
   {
@@ -376,9 +455,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia Global Project (8 threads) 1.10.10",
+   "display_name": "Julia Global (10 threads) 1.10",
    "language": "julia",
-   "name": "julia-global-project-_8-threads_-1.10"
+   "name": "julia-global-_10-threads_-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
