--- a/examples/esr-dynamic-aperture/esr-da-chrom.ipynb
+++ b/examples/esr-dynamic-aperture/esr-da-chrom.ipynb
@@ -2,29 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "399323c0-d2b1-492d-9a47-8a52842604fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1mPrecompiling\u001b[22m\u001b[39m packages...\n",
-      "  44793.2 ms\u001b[32m  ✓ \u001b[39mSciBmad\n",
-      "  1 dependency successfully precompiled in 45 seconds. 111 already precompiled.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Revise\n",
-    "using SciBmad, CairoMakie\n",
-    "set_theme!(theme_latexfonts())"
+    "using SciBmad\n",
+    "using CairoMakie # Plotting package\n",
+    "using Optim # Optimization package\n",
+    "using GTPSA # For gradients wrt Twiss parameters\n",
+    "using StaticArrays, LinearAlgebra # For performance + utility\n",
+    "\n",
+    "set_theme!(theme_latexfonts()) # Use LaTeX font for plotting\n",
+    "GTPSA.show_eps=1e-12; # Hides tiny monomials in output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "bc05f93f-b6ad-43b8-8aa4-f65091e7968c",
    "metadata": {},
    "outputs": [],
@@ -34,25 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "1456f94f-0169-4e29-88d1-3b1f1a1ae002",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.338664 seconds (5.60 M allocations: 297.685 MiB, 13.56% gc time)\n"
-     ]
-    }
-   ],
-   "source": [
-    "@time twiss(ring);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "84fcb8ab-cf23-4953-867e-dc39d9dbe888",
    "metadata": {},
    "outputs": [
@@ -96,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "19008b98-156d-4256-aa70-6a569ec2dfba",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element StaticArraysCore.SVector{3, TPS64{GTPSA.Dynamic}}:\n",
+       "3-element SVector{3, TPS64{GTPSA.Dynamic}}:\n",
        "Descriptor(NV=6, MO=1)\n",
        " Index Coefficient                Order   Exponent\n",
        "--------------------------------------------------------------------\n",
@@ -114,20 +92,19 @@
        "   3:  -2.3124330713838033e+00      1      0   0   0   0   0   1\n"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Tunes:\n",
-    "GTPSA.show_eps=1e-9\n",
     "tw.tunes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "4c3ab5ba-1abc-4ad4-9140-5f2160c8016a",
    "metadata": {},
    "outputs": [
@@ -179,14 +156,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "e6f84c31-e482-4385-b5ac-79aedff7a873",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3-element StaticArraysCore.SVector{3, TPS64{GTPSA.Dynamic}}:\n",
+       "3-element SVector{3, TPS64{GTPSA.Dynamic}}:\n",
        "Descriptor(NV=6, MO=2)\n",
        " Index Coefficient                Order   Exponent\n",
        "--------------------------------------------------------------------\n",
@@ -202,7 +179,7 @@
        "   3:  -3.1014388201607477e+00      2      0   0   0   0   0   2\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,61 +191,199 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
+   "id": "36369468-2272-46db-95e7-d7b811b44075",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: replacing module Controls.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Seems like chromaticity not perfectly optimized. \n",
+    "# First just make all focusing sextupoles one knob,\n",
+    "# defocusing other knob\n",
+    "sextupoles = filter(x->x.kind==\"Sextupole\", ring.line)\n",
+    "chrom_sextupoles = filter(x->x.Kn2 != 0, sextupoles)\n",
+    "\n",
+    "sfs = filter(x->x.Kn2 > 0, chrom_sextupoles)\n",
+    "sds = filter(x->x.Kn2 < 0, chrom_sextupoles)\n",
+    "\n",
+    "# Now can apply knob\n",
+    "# Let's first do that\n",
+    "module Controls end\n",
+    "Controls.K2F = 0\n",
+    "Controls.K2D = 0\n",
+    "\n",
+    "foreach(x->x.Kn2 = DefExpr(()->Controls.K2F), sfs)\n",
+    "foreach(x->x.Kn2 = DefExpr(()->Controls.K2D), sds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "b32f5dc2-e8e6-4aef-ae53-aeeabee3c993",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "288-element Vector{Float64}:\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  ⋮\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314\n",
-       " -3.385942324738\n",
-       "  2.5230882715314\n",
-       "  2.5230882715314"
+       " * Status: success\n",
+       "\n",
+       " * Candidate solution\n",
+       "    Final objective value:     1.534466e+03\n",
+       "\n",
+       " * Found with\n",
+       "    Algorithm:     L-BFGS\n",
+       "\n",
+       " * Convergence measures\n",
+       "    |x - x'|               = 4.24e-04 ≰ 0.0e+00\n",
+       "    |x - x'|/|x'|          = 1.25e-04 ≰ 0.0e+00\n",
+       "    |f(x) - f(x')|         = 6.34e+04 ≰ 0.0e+00\n",
+       "    |f(x) - f(x')|/|f(x')| = 4.13e+01 ≰ 0.0e+00\n",
+       "    |g(x)|                 = 1.20e-09 ≤ 1.0e-08\n",
+       "\n",
+       " * Work counters\n",
+       "    Seconds run:   1  (vs limit Inf)\n",
+       "    Iterations:    1\n",
+       "    f(x) calls:    10\n",
+       "    ∇f(x) calls:   10\n"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Seems like chromaticity not perfectly optimized. \n",
-    "# Let's first do that\n",
-    "using OptimizationLBFGSB\n",
+    "# Now use AD to make chromaticities +1\n",
     "\n",
+    "# Define function to return objective function (F) AND \n",
+    "# gradient (G) IF PROVIDED:\n",
+    "function f_and_grad!(F, G, u, p)\n",
+    "    ring = p[1]\n",
+    "    control_mod = p[2]\n",
+    "    weight = p[3]\n",
+    "    chrom1_goal = p[4]\n",
+    "    chrom2_goal = p[5]\n",
     "\n",
+    "    if G !== nothing\n",
+    "        # 6 variables to 2nd order, 2 parameters to 1st order\n",
+    "        dchrom = Descriptor(6, 2, 2, 2)\n",
+    "        Δk = params(dchrom)\n",
+    "        control_mod.K2F = u[1] + Δk[1]\n",
+    "        control_mod.K2D = u[2] + Δk[2]\n",
+    "        tw = twiss(ring; GTPSA_descriptor=dchrom, at=[]) # at no elements, only tunes\n",
+    "        # Construct Jacobian\n",
+    "        chrom1 = tw.tunes[1][6]\n",
+    "        dchrom1_dK2F = tw.tunes[1][param=1]\n",
+    "        dchrom1_dK2D = tw.tunes[1][param=2]\n",
+    "        \n",
+    "        chrom2 = tw.tunes[2][6]\n",
+    "        dchrom2_dK2F = tw.tunes[2][param=1]\n",
+    "        dchrom2_dK2D = tw.tunes[2][param=2]\n",
+    "        dQs_dV = tw.tunes[3][param=1]\n",
     "\n",
+    "        # Apply to gradient of sum of squares\n",
+    "        res = SA[chrom1-chrom1_goal, chrom2-chrom2_goal]\n",
+    "        J = SA[dchrom1_dK2F dchrom1_dK2D; dchrom2_dK2F dchrom2_dK2D]\n",
+    "        G .= 2*transpose(J)*Diagonal(SA[weight^2, weight^2])*res\n",
     "\n",
-    "# Set up sextupole families\n",
-    "# 2 families per arc, 180 degree phase advance between each\n",
-    "sextupoles = filter(x->x.kind==\"Sextupole\", ring.line)\n",
-    "chrom_sextupoles = filter(x->x.Kn2 != 0, sextupoles)\n",
-    "map(x->x.name, chrom_sextupoles)\n",
-    "map(x->x.Kn2, chrom_sextupoles)\n"
+    "        if F !== nothing\n",
+    "            return sum(abs2, weight*res)\n",
+    "        end\n",
+    "    elseif F !== nothing # Just compute Qs, no derivative \n",
+    "        # This is for gradient-free optimizers\n",
+    "        control_mod.K2F = u[1]\n",
+    "        control_mod.K2D = u[2]\n",
+    "        tw = twiss(ring; GTPSA_descriptor=Descriptor(6, 2), at=[]) # at no elements, only tunes\n",
+    "        chrom1 = tw.tunes[1][6]\n",
+    "        chrom2 = tw.tunes[2][6]\n",
+    "        res = SA[chrom1-chrom1_goal, chrom2-chrom2_goal] \n",
+    "        return sum(abs2, weight*res)\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Optimize using Optim.jl\n",
+    "u0 = [2.5230882715314, -3.385942324738] # initial guess, use K2s already there\n",
+    "p = (ring, Controls, 1e4, 1.0, 1.0)\n",
+    "\n",
+    "# Define closure with parameters\n",
+    "# Use Optim.NLSolversBase.only_fg! to specify f_and_gradient provided:\n",
+    "f = Optim.NLSolversBase.only_fg!((F,G,u)->f_and_grad!(F,G,u,p))\n",
+    "\n",
+    "# Optimize\n",
+    "sol = Optim.optimize(f, u0, LBFGS())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "d3b15fda-bf98-4eaf-a1fd-95ea5d9850f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3.3862150931309407"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Controls.K2F = sol.minimizer[1]\n",
+    "Controls.K2D = sol.minimizer[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "68c98d49-d122-4935-b36c-5b918a303c8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element SVector{3, TPS64{GTPSA.Dynamic}}:\n",
+       "Descriptor(NV=6, MO=2)\n",
+       " Index Coefficient                Order   Exponent\n",
+       "--------------------------------------------------------------------\n",
+       "   1:   8.0000003224449140e-02      0      0   0   0   0   0   0\n",
+       "   1:   9.9797763033837683e-01      1      0   0   0   0   0   1\n",
+       "--------------------------------------------------------------------\n",
+       "   2:   1.3999999903914498e-01      0      0   0   0   0   0   0\n",
+       "   2:   9.9664519972679499e-01      1      0   0   0   0   0   1\n",
+       "--------------------------------------------------------------------\n",
+       "   3:  -2.3124330713838033e+00      1      0   0   0   0   0   1\n",
+       "   3:   6.2704783838338010e+00      2      1   1   0   0   0   0\n",
+       "   3:   6.2621064753992322e+00      2      0   0   1   1   0   0\n",
+       "   3:  -3.1030331817461838e+00      2      0   0   0   0   0   2\n"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twiss(ring; GTPSA_descriptor=Descriptor(6,2), at=[]).tunes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fbfb4fd-0be1-4a01-a5b1-f0a1712a9456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Turns out that's really the best we can do"
    ]
   },
   {
