--- a/examples/esr-dynamic-aperture/esr-da.ipynb
+++ b/examples/esr-dynamic-aperture/esr-da.ipynb
@@ -23,14 +23,24 @@
    "execution_count": 2,
    "id": "bc05f93f-b6ad-43b8-8aa4-f65091e7968c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39m`@elements` is deprecated and will be removed in the next breaking release. Use `@elements` instead.\n",
+      "\u001b[33m\u001b[1m│ \u001b[22m\u001b[39m  caller = ip:0x0\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Core :-1\u001b[39m\n"
+     ]
+    }
+   ],
    "source": [
     "include(\"esr-v6.3.1-noDA.jl\");"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "84fcb8ab-cf23-4953-867e-dc39d9dbe888",
    "metadata": {},
    "outputs": [
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "19008b98-156d-4256-aa70-6a569ec2dfba",
    "metadata": {},
    "outputs": [
@@ -83,16 +93,16 @@
       "text/plain": [
        "3-element SVector{3, TPS64{GTPSA.Dynamic}}:\n",
        "Descriptor(NV=6, MO=1)\n",
-       " Index Coefficient                Order   Exponent\n",
-       "--------------------------------------------------------------------\n",
-       "   1:   8.0000003224447711e-02      0      0   0   0   0   0   0\n",
-       "--------------------------------------------------------------------\n",
-       "   2:   1.3999999903914259e-01      0      0   0   0   0   0   0\n",
-       "--------------------------------------------------------------------\n",
-       "   3:  -2.3124330713838033e+00      1      0   0   0   0   0   1\n"
+       "INDEX  COEFFICIENT             ORDER   EXPONENTS\n",
+       "----------------------------------------------------\n",
+       "  1:   8.0000003224447711E-02    0     0 0  0 0  0 0\n",
+       "----------------------------------------------------\n",
+       "  2:   1.3999999903914259E-01    0     0 0  0 0  0 0\n",
+       "----------------------------------------------------\n",
+       "  3:  -2.3124330713838033E+00    1     0 0  0 0  0 1\n"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "4c3ab5ba-1abc-4ad4-9140-5f2160c8016a",
    "metadata": {},
    "outputs": [
@@ -115,18 +125,18 @@
       "TUNES =================\n",
       "3-element SVector{3, TPS64{GTPSA.Dynamic}}:\n",
       "Descriptor(NV=6, MO=2)\n",
-      " Index Coefficient                Order   Exponent\n",
-      "--------------------------------------------------------------------\n",
-      "   1:   8.0000003224447711e-02      0      0   0   0   0   0   0\n",
-      "   1:   1.0191066171446810e+00      1      0   0   0   0   0   1\n",
-      "--------------------------------------------------------------------\n",
-      "   2:   1.3999999903914259e-01      0      0   0   0   0   0   0\n",
-      "   2:   9.8314009503290645e-01      1      0   0   0   0   0   1\n",
-      "--------------------------------------------------------------------\n",
-      "   3:  -2.3124330713838033e+00      1      0   0   0   0   0   1\n",
-      "   3:   6.4032357232905195e+00      2      1   1   0   0   0   0\n",
-      "   3:   6.1772514000128549e+00      2      0   0   1   1   0   0\n",
-      "   3:  -3.1014388201607477e+00      2      0   0   0   0   0   2\n",
+      "INDEX  COEFFICIENT             ORDER   EXPONENTS\n",
+      "----------------------------------------------------\n",
+      "  1:   8.0000003224447711E-02    0     0 0  0 0  0 0\n",
+      "  1:   1.0191066171446810E+00    1     0 0  0 0  0 1\n",
+      "----------------------------------------------------\n",
+      "  2:   1.3999999903914259E-01    0     0 0  0 0  0 0\n",
+      "  2:   9.8314009503290645E-01    1     0 0  0 0  0 1\n",
+      "----------------------------------------------------\n",
+      "  3:  -2.3124330713838033E+00    1     0 0  0 0  0 1\n",
+      "  3:   6.4032357232905195E+00    2     1 1  0 0  0 0\n",
+      "  3:   6.1772514000128549E+00    2     0 0  1 1  0 0\n",
+      "  3:  -3.1014388201607477E+00    2     0 0  0 0  0 2\n",
       "\n",
       "=======================\n"
      ]
@@ -196,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "6cf42c19-ce66-4729-aa3d-2debd34da2b8",
    "metadata": {},
    "outputs": [
@@ -206,7 +216,7 @@
        "Main.Controls"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "f30979ef-a49d-470b-b223-1a8b2812d44e",
    "metadata": {},
    "outputs": [],
@@ -240,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "39ece86a-91cb-4e5a-b104-3a078db5cebf",
    "metadata": {},
    "outputs": [
@@ -269,7 +279,7 @@
        "    ∇f(x) calls:   6\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
