--- a/examples/julia/ad-examples.ipynb
+++ b/examples/julia/ad-examples.ipynb
@@ -44,7 +44,7 @@
     "function track_a_particle(v0, beamline)\n",
     "    v0_ = similar(v0)\n",
     "    v0_ .= v0\n",
-    "    b0 = Bunch(v0_; species=beamline.species_ref, R_ref=beamline.R_ref)\n",
+    "    b0 = Bunch(v0_; species=beamline.species_ref, p_over_q_ref=beamline.p_over_q_ref)\n",
     "    track!(b0, beamline)\n",
     "    return b0.coords.v\n",
     "end\n",
@@ -225,9 +225,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia Global Project (8 threads) 1.10.10",
+   "display_name": "Julia Global (10 threads) 1.10",
    "language": "julia",
-   "name": "julia-global-project-_8-threads_-1.10"
+   "name": "julia-global-_10-threads_-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
