--- a/examples/julia/errors-fitting.ipynb
+++ b/examples/julia/errors-fitting.ipynb
@@ -8,7 +8,7 @@
     "# Errors Fitting\n",
     "This notebook shows a method of determining errors in a real accelerator by modelling a virtual twin. In the real accelerator, quadrupoles are \"dithered\" (strength slightly varied) and the closed orbit is recorded for each quad dithering. The result is dependent on the machine errors. Then in our model, we do the same procedure and optimize over the errors in the ring, until there is agreement with the real accelerator.\n",
     "\n",
-    "We use the `Optimization.jl` package to optimize this, and in this first notebook use finite differences via `FiniteDiff.jl` to compute the closed orbit response for each quad dithering, as a first example. `GTPSA.jl`, paired with `NonlinearNormalForm.jl` can do this implicit auto-differentiation instead, likely offering performance improvements. This will be detailed in a notebook to be released later."
+    "We use the `Optimization.jl` package to optimize this, and in this first notebook use finite differences via `FiniteDiff.jl` to compute the closed orbit response for each quad dithering, as a first example. `GTPSA.jl`, paired with `NonlinearNormalForm.jl` can do this implicit auto-differentiation instead, which especially in an implicit AD problem will offer big performance gains. This will be detailed in a notebook to be released later."
    ]
   },
   {
@@ -119,8 +119,8 @@
     "    apply_tilts!(real_bends, bend_tilts)\n",
     "    try\n",
     "        co_info = find_closed_orbit(ring)\n",
-    "        t = twiss(ring; co_info=co_info)\n",
-    "        println(\"success! seed=$seed, tunes=$((t.phi_1[end], t.phi_2[end]))\")\n",
+    "        tw = twiss(ring; co_info=co_info)\n",
+    "        println(\"success! seed=$seed, tunes=$(tw.tunes)\")\n",
     "        break\n",
     "    catch\n",
     "        continue\n",
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "t = twiss(real_ring)\n",
+    "t = twiss(real_ring).table\n",
     "# Plot the orbit around the ring:\n",
     "with_theme(theme_latexfonts()) do\n",
     "    f = Figure(fontsize=22, size=(800,500));\n",
@@ -198,7 +198,7 @@
     "    \n",
     "    # Track this closed orbit\n",
     "    idx = 1\n",
-    "    b0 = Bunch(co; R_ref=lattice.R_ref, species=lattice.species_ref)\n",
+    "    b0 = Bunch(co; p_over_q_ref=lattice.p_over_q_ref, species=lattice.species_ref)\n",
     "    for ele in lattice.line\n",
     "        if ele in eles # If at this element, record orbit\n",
     "            orbit_x[idx] = b0.coords.v[1] \n",
@@ -345,7 +345,7 @@
     "\n",
     "p = (model_ring, model_quads, model_bpms, model_bends, real_bpm_meas, res, 10000)\n",
     "\n",
-    "tm = twiss(model_ring)\n",
+    "tm = twiss(model_ring).table\n",
     "# Plot the orbit around the ring:\n",
     "with_theme(theme_latexfonts()) do\n",
     "    f = Figure(fontsize=22, size=(800,500));\n",
@@ -441,7 +441,7 @@
     }
    ],
    "source": [
-    "tm = twiss(model_ring)\n",
+    "tm = twiss(model_ring).table\n",
     "# Plot the orbit around the ring:\n",
     "with_theme(theme_latexfonts()) do\n",
     "    f = Figure(fontsize=22, size=(800,500));\n",
