prep some stuff:

--- a/examples/julia/dynamic-aperture-gpu.ipynb
+++ b/examples/julia/dynamic-aperture-gpu.ipynb
@@ -59,6 +59,7 @@
     }
    ],
    "source": [
+    "include(\"esr-v6.3.1-tapered.jl\"); \n",
     "x_norm_da, y_norm_da = dynamic_aperture(\n",
     "    ring;\n",
     "    n_turns = 2000,\n",
@@ -106,7 +107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.9",
+   "display_name": "Julia 1.10",
    "language": "julia",
    "name": "julia-1.10"
   },
@@ -114,7 +115,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.9"
+   "version": "1.10.10"
   }
  },
  "nbformat": 4,
